--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
 			href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@300;400;500&display=swap"
 			rel="stylesheet"
 		/>
-    <link rel="stylesheet" href="https://maxst.icons8.com/vue-static/landings/line-awesome/font-awesome-line-awesome/css/all.min.css">
+    <link rel="stylesheet" href="https://maxst.icons8.com/vue-static/landings/line-awesome/line-awesome/1.3.0/css/line-awesome.min.css">
 	</head>
 	<body>
 		<div id="app"></div>
